# dune-crawler

./: Cargo.toml  config.yaml
migrations/: 20220620013908_create_dune_labels_table.sql  20220620093745_create_dune_labels_table.down.sql  20220620093745_create_dune_labels_table.up.sql
src/: configuration.rs  main.rs  query_task.rs
src/domain/: mod.rs
src/domain/model/: address_label.rs  mod.rs
src/domain/query/: execute_query.rs  find_results.rs  get_queue_position.rs  mod.rs  upsert_query.rs
