[package]
name = "dune-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.13"
futures-util = "0.3"
rayon = "1.5"
reqwest = { version = "0.11", features = ["cookies", "json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.19", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
